--- a/influxdb/Cargo.toml
+++ b/influxdb/Cargo.toml
@@ -21,7 +21,7 @@ futures = "0.3.4"
 lazy_static = "1.4.0"
 influxdb_derive = { version = "0.4.0", optional = true }
 regex = "1.3.5"
-surf = { git = "https://github.com/altanozlu/surf",  version = "2.2.0", default-features = false }
+surf = { git = "https://github.com/altanozlu/surf",  version = "2.2.0", default-features = false, branch="main" }
 serde = { version = "1.0.104", features = ["derive"], optional = true }
 serde_json = { version = "1.0.48", optional = true }
 thiserror = "1.0"
