--- a/influxdb/Cargo.toml
+++ b/influxdb/Cargo.toml
@@ -21,19 +21,16 @@ futures = "0.3.4"
 lazy_static = "1.4.0"
 influxdb_derive = { version = "0.4.0", optional = true }
 regex = "1.3.5"
-surf = { git = "https://github.com/altanozlu/surf",  version = "2.2.0", default-features = false, branch="main" }
+
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0.104", features = ["derive"], optional = true }
 serde_json = { version = "1.0.48", optional = true }
 thiserror = "1.0"
 
 [features]
 use-serde = ["serde", "serde_json"]
-curl-client = ["surf/curl-client"]
-h1-client = ["surf/h1-client"]
-h1-client-rustls = ["surf/h1-client-rustls"]
-hyper-client = ["surf/hyper-client"]
-wasm-client = ["surf/wasm-client"]
-default = ["use-serde", "hyper-client"]
+default = ["use-serde"]
 derive = ["influxdb_derive"]
 
 [dev-dependencies]
